[gd_scene load_steps=45 format=2]

[ext_resource path="res://assets/enemies/high_demon/HighDemon_Idle.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/high_demon/HighDemon_Run.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/high_demon/HighDemon_Cast.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/high_demon/HighDemon_Death.png" type="Texture" id=4]
[ext_resource path="res://scenes/player_detection_zone.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/demon_high.gd" type="Script" id=6]
[ext_resource path="res://scenes/enemy_status_bar.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sound_effects/demon/demon_damage.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 560, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 560, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 560, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 720, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 800, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 880, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 80, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "death",
"speed": 7.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "attack",
"speed": 13.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "run",
"speed": 6.0
} ]

[node name="demon_high" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 6 )

[node name="sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 9 )
animation = "death"
frame = 1
playing = true

[node name="colision" type="CollisionPolygon2D" parent="."]
position = Vector2( -9.84375, -0.593742 )
scale = Vector2( 2.8125, 2.8125 )
polygon = PoolVector2Array( -24.5, 23.5, 31.5, 23.5, 21.5, 4.5, 15.5, 4.5, 12.5, -5.5, 12.5, -24.5, -11.5, -24.5, -11.5, -17.5, -20.5, -8.5, -20.5, 6.5 )

[node name="castPosition" type="Position2D" parent="."]
position = Vector2( 24, -20 )
__meta__ = {
"_gizmo_extents_": 3.9
}

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="cooldown_attack" type="Timer" parent="."]
wait_time = 3.0

[node name="HitArea" type="Area2D" parent="." groups=["enemies"]]
collision_layer = 4
collision_mask = 112

[node name="colision" type="CollisionPolygon2D" parent="HitArea"]
position = Vector2( -9.84375, -0.593742 )
scale = Vector2( 2.8125, 2.8125 )
polygon = PoolVector2Array( -24.5, 23.5, 31.5, 23.5, 21.5, 4.5, 15.5, 4.5, 12.5, -5.5, 12.5, -24.5, -11.5, -24.5, -11.5, -17.5, -20.5, -8.5, -20.5, 6.5 )

[node name="EnemyStatusBar" parent="." instance=ExtResource( 7 )]
margin_left = -69.0
margin_top = -117.0
margin_right = -42.0
margin_bottom = -112.0
rect_scale = Vector2( 4, 3.96 )
max_value = 90.0
value = 90.0

[node name="damage_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="cooldown_attack" to="." method="_on_cooldown_attack_timeout"]
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
